test/week7/valid/test4_scope_shadow.c
int x;
x = 1;
{
    int x;
    x = 2;
    x = x + 1;
}
x = x + 1;
