test/week7/invalid/test4_malformed_if_else.c
int x = 1;
int y = 2;
if (x < y) {
    x = x + 1;
} else {
    y = y + 1;
} else {
    x = x - 1;
}
